# AgentMesh

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
frontend/: .env.example  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  vite-env.d.ts
frontend/src/components/: AgentCards.test.tsx  AgentCards.tsx  AgentPipeline.tsx  ChatComposer.tsx  ChatTranscript.tsx  IdeaForm.tsx  ReportView.test.tsx  ReportView.tsx
frontend/src/hooks/: useAnalyzeStream.test.ts  useAnalyzeStream.ts  useChatStream.test.ts  useChatStream.ts
frontend/src/types/: chat.ts
frontend/src/utils/: extractMarkdownReport.test.ts  extractMarkdownReport.ts
orchestrator/: pyproject.toml
orchestrator/src/orchestrator/: __init__.py  a2a_client.py  cli.py  deep_workflow.py  dependencies.py  main.py  routes_analyze.py  settings.py  workflow.py
orchestrator/tests/: conftest.py  test_api.py  test_health.py  test_workflow.py
orchestrator_agent/: pyproject.toml
orchestrator_agent/src/orchestrator_agent/: __init__.py  a2a_tools.py  cli.py  deep_agent.py  server.py  settings.py  workflow.py
orchestrator_agent/src/orchestrator_agent/skills/orchestrator-workflow/: SKILL.md
orchestrator_agent/tests/: test_orchestrator_api.py  test_orchestrator_workflow.py
reference/: PLAN.md
scripts/: smoke_research.py
