[project]
name = "agentmesh-workspace"
version = "0.1.0"
description = "AI Product Analyst — Deep Agents + A2A (uv workspace root)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.8",
]

[tool.uv.workspace]
members = [
    "packages/shared",
    "packages/agent_research",
    "packages/agent_critic",
    "packages/agent_synthesizer",
    "orchestrator",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"orchestrator/src/orchestrator/cli.py" = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: hits real services",
    "requires_llm: needs Ollama or cloud model",
]
